--- a/index.html
+++ b/index.html
@@ -274,7 +274,21 @@
 
     <nav>
         <ul>
-        
+            <li>
+                小组源码
+                <ul>
+                    <li><a href="https://github.com/WangEdward1027/SearchEngine/">王绪飞</a></li>
+                </ul>
+            </li>
+            <div id="extraButtons">
+    <a href="https://www.ecnu.edu.cn/">
+        <img src="1.jpg" alt="校徽" style="width: 200px; height: auto; border: none;">
+    </a>
+    <a href="http://www.cs.ecnu.edu.cn/">
+        <img src="2.jpg" alt="院徽" style="width: 200px; height: auto; border: none;">
+    </a>
+</div>
+
         </ul>
     </nav>
 
