--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@ div {
         }
 	
 .image-link {
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 5px; /* 添加圆角效果 */
     margin-right: 10px; /* 与音乐按钮的间距 */
     cursor: pointer;
@@ -309,8 +309,8 @@ div {
         </ul>
 
 <div style="display: flex; align-items: center; gap: 10px;"> <!-- 添加 gap -->
-    <img src="1.jpg" alt="图片1" class="image-link" onclick="window.location.href='https://example1.com';" />
-    <img src="2.jpg" alt="图片2" class="image-link" onclick="window.location.href='https://example2.com';" />
+    <img src="1.jpg" alt="图片1" class="image-link" onclick="window.location.href='https://www.ecnu.edu.cn/';" />
+    <img src="2.jpg" alt="图片2" class="image-link" onclick="window.location.href='http://www.cs.ecnu.edu.cn/';" />
     <button id="musicButton" style="position: static;">播放音乐</button> <!-- 确保按钮没有绝对定位 -->
 </div>
 
