--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@ div {
         }
 
         #recommendations {
+	    display: block;
             margin-top: 30px;
             width: 400px;
             max-height: 200px;
